tests/fsharp/typecheck/sigs/neg_byref_22.bsl

neg_byref_22.fs(3,16,3,32): typecheck error FS0426: A method return type would contain byrefs which is not permitted
